src/test/ui/type/type-check/assignment-expected-bool.stderr
error[E0308]: mismatched types
  --> $DIR/assignment-expected-bool.rs:6:19
   |
LL |     let _: bool = 0 = 0;
   |                   ^^^^^
   |                   |
   |                   expected bool, found ()
   |                   help: try comparing for equality: `0 == 0`
   |
   = note: expected type `bool`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/assignment-expected-bool.rs:9:14
   |
LL |         0 => 0 = 0,
   |              ^^^^^
   |              |
   |              expected bool, found ()
   |              help: try comparing for equality: `0 == 0`
   |
   = note: expected type `bool`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/assignment-expected-bool.rs:10:14
   |
LL |         _ => 0 = 0,
   |              ^^^^^
   |              |
   |              expected bool, found ()
   |              help: try comparing for equality: `0 == 0`
   |
   = note: expected type `bool`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/assignment-expected-bool.rs:14:17
   |
LL |         true => 0 = 0,
   |                 ^^^^^
   |                 |
   |                 expected bool, found ()
   |                 help: try comparing for equality: `0 == 0`
   |
   = note: expected type `bool`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/assignment-expected-bool.rs:18:8
   |
LL |     if 0 = 0 {}
   |        ^^^^^
   |        |
   |        expected bool, found ()
   |        help: try comparing for equality: `0 == 0`
   |
   = note: expected type `bool`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/assignment-expected-bool.rs:20:24
   |
LL |     let _: bool = if { 0 = 0 } {
   |                        ^^^^^
   |                        |
   |                        expected bool, found ()
   |                        help: try comparing for equality: `0 == 0`
   |
   = note: expected type `bool`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/assignment-expected-bool.rs:21:9
   |
LL |         0 = 0
   |         ^^^^^
   |         |
   |         expected bool, found ()
   |         help: try comparing for equality: `0 == 0`
   |
   = note: expected type `bool`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/assignment-expected-bool.rs:23:9
   |
LL |         0 = 0
   |         ^^^^^
   |         |
   |         expected bool, found ()
   |         help: try comparing for equality: `0 == 0`
   |
   = note: expected type `bool`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/assignment-expected-bool.rs:26:13
   |
LL |     let _ = (0 = 0)
   |             ^^^^^^^
   |             |
   |             expected bool, found ()
   |             help: try comparing for equality: `0 == 0`
   |
   = note: expected type `bool`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/assignment-expected-bool.rs:27:14
   |
LL |         && { 0 = 0 }
   |              ^^^^^
   |              |
   |              expected bool, found ()
   |              help: try comparing for equality: `0 == 0`
   |
   = note: expected type `bool`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/assignment-expected-bool.rs:28:12
   |
LL |         || (0 = 0);
   |            ^^^^^^^
   |            |
   |            expected bool, found ()
   |            help: try comparing for equality: `0 == 0`
   |
   = note: expected type `bool`
              found type `()`

error[E0070]: invalid left-hand side expression
  --> $DIR/assignment-expected-bool.rs:31:20
   |
LL |     let _: usize = 0 = 0;
   |                    ^^^^^ left-hand of expression not valid

error[E0308]: mismatched types
  --> $DIR/assignment-expected-bool.rs:31:20
   |
LL |     let _: usize = 0 = 0;
   |                    ^^^^^ expected usize, found ()
   |
   = note: expected type `usize`
              found type `()`

error: aborting due to 13 previous errors

Some errors have detailed explanations: E0070, E0308.
For more information about an error, try `rustc --explain E0070`.
